# https-github.com-PSU-CMPSC441-GAME450-spring2026-labs

./: .gitignore  pyproject.toml
lab00/tests/: test_problem1_unique.py  test_problem2_top_words.py  test_problem3_student_averages.py  test_problem4_near_palindrome.py  test_problem5_smoothing_simulation.py
lab01/: git-lab-README.md  lab01.py
lab02/: beauty_of_python.py  dict_json_exercise.py  generator_exercise.py  lab02.py  poker_hand.py  python-lab-README.md
lab02/tests/: test_best_hand.py  test_dict_json_exercise.py  test_generator_exercise.py
lab03/: attempts.txt  demo_agent.py  lab03-README.md  lab03.md  lab03_dnd_agent.py  project-README.md
lab04/: demo.py  demo_template.json  enemy.json  lab04.py  lab04_dm.json  lab04_enemy.json  lab04_npc.json  npc.json  templates-lab-README.md
lab05/: demo.py  demo_template.json  lab05-tool-use.md  lab05.py  lab05_dice_template.json  lab05_trader_chat.json  structured-output-lab-README.md  tool-use-lab-README.md
lab05/demo/: tool_demo.py  tool_template.json
lab05/test/: customer_chat.json  test_scenarios.json  test_trader.py
lab06/: README.md  lab06.py
lab06/tests/: conftest.py  test_lab06.py
lab08/: RAG_README.md  lab08.py
lab08/data/: dnd_character_classes.txt  dnd_magic_items.txt
lab11/: lab11.py  mcp-lab-README.md  mcp_server.py  requirements.txt
lab11/demo/: simple_mcp_client.py  simple_mcp_server.py  tool_template.json
util/: base.py  dndnetwork.py  game.py  llm_utils.py  player.py
util/templates/: dm_chat.json
