[project]
name = "spring2025-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.100.0",
    "langchain>=1.2.12",
    "langchain-text-splitters>=1.1.1",
    "langchain-ollama>=0.2.0",
    "langchain-mcp-adapters>=0.0.1",
    "mcp>=1.0.0",
    "ollama>=0.1.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "uvicorn>=0.23.0",
    "fastmcp>=3.2.0",
]
